Complate HybridList implementation